.provarCaches/00D5f000005vwGkEAI/objects/rstk__plmbom__c.object
<CustomObject>
    <description>plmbom__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__plmbom_plmitem__r.Name+&quot;-&quot;+rstk__plmbom_compitem__c, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_compitem__c</fullName>
        <label>Component Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_compitemid__c</fullName>
        <label>PLM Record ID for Component Item (guid)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_item__c</fullName>
        <label>ZZZZZZZ_Parent Item Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_line__c</fullName>
        <label>Line Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_plmcompitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PLM Import Component Item</label>
        <referenceTo>rstk__plmitem__c</referenceTo>
        <relationshipLabel>PLM Import BOMs (PLM Import Component Item)</relationshipLabel>
        <relationshipName>plmboms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_plmitem__c</fullName>
        <label>PLM Import Parent Item</label>
        <referenceTo>rstk__plmitem__c</referenceTo>
        <relationshipLabel>PLM Import BOMs</relationshipLabel>
        <relationshipName>plmboms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_qtyper__c</fullName>
        <label>Qty Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__plmbom_refdesig__c</fullName>
        <label>Reference Designators</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PLM Import BOM</label>
    <listViews>
        <fullName>rstk__PLM_Import_BOMs</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstk__plmbom_compitem__c</columns>
        <columns>rstk__plmbom_plmcompitem__c</columns>
        <columns>rstk__plmbom_item__c</columns>
        <columns>rstk__plmbom_plmitem__c</columns>
        <columns>rstk__plmbom_compitemid__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>PLM Import BOMs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Import BOMs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>